config/ovh/ovh_mybinder_org_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovh-mybinder-org
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: ovh.mybinder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: binder
                port:
                  number: 8585
  tls:
    - secretName: kubelego-tls-binder-ovh
      hosts:
        - "ovh.mybinder.org"
